brain/sources/prod-metadata/objects/Section_Interview_Type__c/Section_Interview_Type__c.object-meta.xml
<CustomObject>
    <label>Section Interview Type</label>
    <nameField>
        <displayFormat>SIT-{00000}</displayFormat>
        <label>Section Interview Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Interview Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>