brain/sources/prod-metadata/objects/Section_Interview_Type__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <referenceTo>Interview_Type__c</referenceTo>
    <relationshipLabel>Section Interview Types</relationshipLabel>
    <relationshipName>Section_Interview_Types</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>