brain/sources/prod-metadata/objects/Section_Interview_Type__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Section Interview Types</relationshipLabel>
    <relationshipName>Section_Interview_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>