brain/sources/prod-metadata/objects/Section_Interview_Type__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Order of this section within this specific interview type. Because a section can belong to several interview types with a different order in each, the per-type sequence lives on this junction rather than on Section__c.Interview_Sequence__c.</description>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>